Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jan-2011 Jean-Marie Simonet
 # Commented out loading of lib_joomla.ini during installation

05-Jan-2011 Andrew Eddie
 # Fixed issue [#21275] Incorrect date format used when tracking banner clicks, causing Error: 500 when clicking on a banner (Cy Lee, Troy Hall).
 # Fixed issue [#23717] Add a field for E-Mail to JForm (Rouven Weßling).
 # Fixed issue [#23891] Toggle enabled state in User Manager (Sander Potjer, Bill Richardson).
 # Fixed issue [#22750] Quick 2h code review: 10 real bugs (files and line numbers included) (Matias Griese, Dennis Hermatski, Elin Waring).
 # Fixed issue [#22659] Debug plugin doesn't show 'afterRender' profiler mark and can't gather statistics of other system plugins (Dennis Hermatski).
 # Fixed issue [#23718] Add a field for URLs to JForm (Rouven Weßling).
 # Fixed issue [#24039] More PHP strict compatibility fixes (Rouven Weßling).
 # Fixed issue [#24114] Article editor fails to define global settings if plugin disabled and still set at default (Daniel Jackson, Christophe Demko).
 # Fixed issue [#21852] Multiple select categories in modules has no way to unselect (Elin Waring, Bill Richardson).

04-Jan-2011 Jean-Marie Simonet
 $ Reordering admin en-GB.com_content.ini and updating xx-XX.com_content.ini
 # [#24104] Creation of My Profile broke Profile Plugin. Thanks Elin.
 # [#24117] A lot of CSS and other changes in beez20 and Beez 5. Thanks Angie.
 # [#24119] Adding automatically the character * to all required fields in admin and site
 $ [#24126] Feed Count vs. Number of articles in News Feed Manager. Thanks Bill.
 $ [#24127] Obsolete string in the news feeds component language file. Thanks Bill. + updated xx-XX.newsfeeds.sys.ini
 

03-Jan-2011 Mark Dexter